--- a/lambda-user-api/serverless.yml
+++ b/lambda-user-api/serverless.yml
@@ -1,5 +1,3 @@
-org: mayank06
-app: lambda-user-api
 service: lambda-user-api
 frameworkVersion: '3'
 
@@ -14,24 +12,59 @@ provider:
     DB_PASSWORD: "mayank1234" 
     DB_PORT: 5432
 
+# functions:
+#   api_handler:  # Single handler for all routes, enable this and disable below one to start using hanlder.py faciltiy
+#     handler: src/handler.route_handler  # This is the entry point
+#     events:
+#       - httpApi:
+#           path: /create_user
+#           method: post
+#       - httpApi:
+#           path: /get_users
+#           method: get
+#       - httpApi:
+#           path: /update_user
+#           method: put
+#       - httpApi:
+#           path: /delete_user
+#           method: delete
+#     layers:
+#       - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1  # Ensure ARN is correct for any layers
+
+
 functions:
-  api_handler:  # Single handler for all routes
-    handler: src/handler.route_handler  # This is the entry point
+  create_user:
+    handler: src/create_user.create_user  
     events:
       - httpApi:
           path: /create_user
           method: post
+    layers:
+      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1  # arn layer created on aws lambda layer
+  get_users:
+    handler: src/get_user.get_users  
+    events:
       - httpApi:
           path: /get_users
           method: get
-      - httpApi:
-          path: /update_user
-          method: put
+    layers:
+      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
+  delete_user:
+    handler: src/delete_user.delete_User  
+    events:
       - httpApi:
           path: /delete_user
           method: delete
     layers:
-      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1  # Ensure ARN is correct for any layers
+      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
+  update_user:
+    handler: src/update_user.update_User  
+    events:
+      - httpApi:
+          path: /update_user
+          method: put
+    layers:
+      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
 
 package:
   include:
