--- a/lambda-user-api/serverless.yml
+++ b/lambda-user-api/serverless.yml
@@ -29,7 +29,7 @@ provider:
 #           path: /delete_user
 #           method: delete
 #     layers:
-#       - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1  # Ensure ARN is correct for any layers
+#       - arn:aws:lambda:ap-south-1:975050329123:layer:db-layer:1  # Ensure ARN is correct for any layers
 
 
 functions:
@@ -40,33 +40,39 @@ functions:
           path: /create_user
           method: post
     layers:
-      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1  # arn layer created on aws lambda layer
+      - arn:aws:lambda:ap-south-1:975050329123:layer:db-layer:1  # arn layer created on aws lambda layer
   get_users:
     handler: src.get_user.get_users  
     events:
       - httpApi:
           path: /get_users
           method: get
-    layers:
-      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
+    # layers:
+    #   - arn:aws:lambda:ap-south-1:975050329123:layer:db-layer:1
   delete_user:
     handler: src.delete_user.delete_User  
     events:
       - httpApi:
           path: /delete_user
           method: delete
-    layers:
-      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
+    # layers:
+    #   - arn:aws:lambda:ap-south-1:975050329123:layer:db-layer:1
   update_user:
     handler: src.update_user.update_User  
     events:
       - httpApi:
           path: /update_user
           method: put
-    layers:
-      - arn:aws:lambda:ap-south-1:975050329123:layer:psycopg2-layer:1
+    # layers:
+    #   - arn:aws:lambda:ap-south-1:975050329123:layer:db-layer:1  #IN MY CASE I TRIED APPROXIMATELY 9-10 TIME BY CREATING NEW ARN (BUT GETTING ON MY CLOUDWATCH, [ERROR] Runtime.ImportModuleError: Unable to import module 'src.create_user': No module named 'psycopg2._psycopg'Traceback (most recent call last):)
 
 package:
   include:
     - src/**
     - db.py  ## Include db.py if it's not in src
+plugins:
+  - serverless-python-requirements  # Add this plugin to handle Python packages
+
+custom:
+  pythonRequirements:
+    dockerizePip: true  # Ensures psycopg2 is built in a compatible environment, if you do not have docker desktop COMMENT THIS LINE {but might lead to may lead to incompatibility issues since Lambda requires libraries to be compiled for Amazon Linux. }
